# m5-detector-certification

./: .gitignore  LICENSE  README.md  RUNBOOK.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backtest/: __init__.py  cli.py  download.py  utils.py
backtest_results/asset_replication/: eth_replication_20260625_224506.json
backtest_results/empirical_vr_null/: empirical_vr_null_20260623_230753.json  empirical_vr_null_fullshape_smoke_20260624.json
backtest_results/eurusd/: eurusd_histdata_cost_gate_matched_20210529_20251231_summary.json
backtest_results/gauge_invariance/: gauge_report_20260624_221834.json
backtest_results/harmonized_benchmark/: harmonized_benchmark_q4_2022_btc.json  harmonized_benchmark_q4_2022_btc_minimal_hmm.json  harmonized_benchmark_smoke.json
backtest_results/holdout/: holdout_confirmatory_20260623_175305.json
backtest_results/iid_floor/: iid_floor_primary_seed43_n100_obs50000.json
backtest_results/online_gcde/: online_gcde_replay.json
backtest_results/persistence/: persistence_report_20260612_214557.json
backtest_results/reference_repair/: recentered_reference_repair_20260710.json
backtest_results/thermodynamic_bound/: mi_bootstrap_sensitivity.json  thermo_report_20260624_082448.json  vr_detector_mi.json
data/injection_runs/: inj_d0.0005_q15_W120.json  inj_d0.0005_q15_W240.json  inj_d0.0005_q15_W60.json  (+101 more)
paper/: ARTIFACT_LEDGER.md  CLAIMS.md  CLAIM_TRACEABILITY.md  HARMONIZED_BENCHMARK_PROTOCOL.md  LICENSE  README.md  REPRODUCTION.md  main.bbl  main.tex  references.bib
scripts/: _bootstrap.py
(+96 files in other folders)
